--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
+  http: ^1.2.1
+  flutter_bloc: ^8.1.5
+  cached_network_image: ^3.3.1
+  pull_to_refresh: ^2.0.0
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +53,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  freezed: ^2.5.2
+  json_serializable: ^6.7.1
+  build_runner: ^2.4.9
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
